// change log update

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 /questions_plugins/plg_surveys/plg_surveys.zip
 /questions_plugins/plg_truefalse/plg_truefalse.zip
 /questions_plugins/plg_timelimit
+com_joomlaquiz.zip
+com_joomlaquiz_expert.zip
