--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,24 @@
 /questions_plugins/plg_timelimit
 com_joomlaquiz.zip
 com_joomlaquiz_expert.zip
+packages/quiz_content_plugin.zip
+packages/plg_truefalse.zip
+pkg_quiz_341.zip
+pkg_quiz_341.xml
+packages/plg_dropdown.zip
+packages/plg_hotspot.zip
+packages/mod_quiz_lastten.zip
+packages/mod_quiz_myresult.zip
+packages/mod_quiz_topxquiz.zip
+packages/mod_quiz_topxusers.zip
+packages/plg_blank.zip
+packages/plg_boilerplate.zip
+packages/plg_choice.zip
+packages/plg_dalliclick.zip
+packages/plg_dragdrop.zip
+packages/plg_imgmatch.zip
+packages/plg_memory.zip
+packages/plg_mquestion.zip
+packages/plg_mresponse.zip
+packages/plg_puzzle.zip
+packages/plg_surveys.zip
