// ini, installer, other fixes

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ packages/plg_mquestion.zip
 packages/plg_mresponse.zip
 packages/plg_puzzle.zip
 packages/plg_surveys.zip
+packages/quiz-xtd-button.zip
+pkg_expert_quiz_341.zip
