--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ packages/plg_surveys.zip
 packages/quiz-xtd-button.zip
 pkg_expert_quiz_341.zip
 *.db
+com_joomlaquiz/.idea/
+com_joomlaquiz_expert/.idea/
