--- a/mod_quiz_topxusers/en-GB.mod_quiz_topxusers.ini
+++ b/mod_quiz_topxusers/en-GB.mod_quiz_topxusers.ini
@@ -2,3 +2,4 @@ MOD_QUIZ_TOPXUSERS="Top X user quiz results"
 MOD_JOOMLAQUIZ_MOD_UNAME="USER NAME"
 MOD_JOOMLAQUIZ_MOD_QPOINTS="POINTS"
 MOD_JOOMLAQUIZ_MOD_SOON="and so on..."
+MOD_JOOMLAQUIZ_MOD_GUEST="Guest"
