--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,21 +9,21 @@ build:regular:
     - zip -v
   script:
     - if grep -rn './' -e "\xEF\xBB\xBF"; then exit 1; fi
-    - grep -E -o '<version>(.*?)</version>' ./pkg_html5flippingbook.xml | sed -E 's/<version>|<\/version>//g' | while read version; do find ./com_html5flippingbook/admin/sql/updates/ -maxdepth 2 -name "*.sql" -print |  sed -E 's/.*\/|\.sql//g' | while read sqin; do if [ "$sqin" \> "$version" ]; then exit 1; fi; done; done
+    - grep -E -o '<version>(.*?)</version>' ./pkg_quiz.xml | sed -E 's/<version>|<\/version>//g' | while read version; do find ./com_joomlaquiz/admin/sql/updates/ -maxdepth 2 -name "*.sql" -print |  sed -E 's/.*\/|\.sql//g' | while read sqin; do if [ "$sqin" \> "$version" ]; then exit 1; fi; done; done
 # delete updater temporary
-    - sed -E -i 's/<file.*?_joomplaceupdater.zip<\/file>//g' ./pkg_html5flippingbook.xml
+    - sed -E -i 's/<file.*?_joomplaceupdater.zip<\/file>//g' ./pkg_quiz.xml
     - mkdir packages
-    - grep -E -o '<file.*>(.*?)</file>' ./pkg_html5flippingbook.xml |  sed -E 's/<file[^>]+>|.zip<\/file>//g' | while read in; do if [ "$in" != 'plg_installer_joomplaceupdater' ]; then cd ./"$in"; zip -r ./../packages/"$in".zip ./*; cd ./../; fi; done
+    - grep -E -o '<file.*>(.*?)</file>' ./pkg_quiz.xml |  sed -E 's/<file[^>]+>|.zip<\/file>//g' | while read in; do if [ "$in" != 'plg_installer_joomplaceupdater' ]; then cd ./"$in"; zip -r ./../packages/"$in".zip ./*; cd ./../; fi; done
     - pwd
   artifacts:
     paths:
     - packages/
-    - pkg_html5flippingbook.xml
-    name: "pkg_html5flippingbook_${CI_BUILD_REF_NAME}"
+    - pkg_quiz.xml
+    name: "pkg_quiz_${CI_BUILD_REF_NAME}"
     when: on_success
     expire_in: 1 day
 
-build:pro:
+build:expert:
   stage: build
   image: php:7.0-apache
   before_script:
@@ -31,16 +31,16 @@ build:pro:
     - zip -v
   script:
     - if grep -rn './' -e "\xEF\xBB\xBF"; then exit 1; fi
-    - grep -E -o '<version>(.*?)</version>' ./pkg_html5flippingbook_pro.xml | sed -E 's/<version>|<\/version>//g' | while read version; do find ./com_html5flippingbook_pro/admin/sql/updates/ -maxdepth 2 -name "*.sql" -print |  sed -E 's/.*\/|\.sql//g' | while read sqin; do if [ "$sqin" \> "$version" ]; then exit 1; fi; done; done
+    - grep -E -o '<version>(.*?)</version>' ./pkg_expert_quiz.xml | sed -E 's/<version>|<\/version>//g' | while read version; do find ./com_joomlaquiz_expert/admin/sql/updates/ -maxdepth 2 -name "*.sql" -print |  sed -E 's/.*\/|\.sql//g' | while read sqin; do if [ "$sqin" \> "$version" ]; then exit 1; fi; done; done
 # delete updater temporary
-    - sed -E -i 's/<file.*?_joomplaceupdater.zip<\/file>//g' ./pkg_html5flippingbook_pro.xml
+    - sed -E -i 's/<file.*?_joomplaceupdater.zip<\/file>//g' ./pkg_expert_quiz.xml
     - mkdir packages
-    - grep -E -o '<file.*>(.*?)</file>' ./pkg_html5flippingbook_pro.xml |  sed -E 's/<file[^>]+>|.zip<\/file>//g' | while read in; do if [ "$in" != 'plg_installer_joomplaceupdater' ]; then cd ./"$in"; zip -r ./../packages/"$in".zip ./*; cd ./../; fi; done
+    - grep -E -o '<file.*>(.*?)</file>' ./pkg_expert_quiz.xml |  sed -E 's/<file[^>]+>|.zip<\/file>//g' | while read in; do if [ "$in" != 'plg_installer_joomplaceupdater' ]; then cd ./"$in"; zip -r ./../packages/"$in".zip ./*; cd ./../; fi; done
     - pwd
   artifacts:
     paths:
     - packages/
-    - pkg_html5flippingbook_pro.xml
-    name: "pkg_html5flippingbook_pro_${CI_BUILD_REF_NAME}"
+    - pkg_expert_quiz.xml
+    name: "pkg_expert_quiz_${CI_BUILD_REF_NAME}"
     when: on_success
     expire_in: 1 day
