--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,10 @@
 stages:
   - build
+  - tests
 
 build:regular:
   stage: build
-  image: php:7.0-apache
-  before_script:
-    - apt-get update -qq && apt-get install -y -qq zip
-    - zip -v
+  image: alex7r/lamp:ccp
   script:
     - if grep -rn './' -e "\xEF\xBB\xBF"; then exit 1; fi
     - grep -E -o '<version>(.*?)</version>' ./pkg_quiz.xml | sed -E 's/<version>|<\/version>//g' | while read version; do find ./com_joomlaquiz/admin/sql/updates/ -maxdepth 2 -name "*.sql" -print |  sed -E 's/.*\/|\.sql//g' | while read sqin; do if [ "$sqin" \> "$version" ]; then exit 1; fi; done; done
@@ -23,12 +21,23 @@ build:regular:
     when: on_success
     expire_in: 1 day
 
+test:regular:
+  stage: test
+  image: alex7r/lamp:ccp
+  script:
+    - pwd
+  artifacts:
+    paths:
+    - packages/
+    name: "tests_log_${CI_BUILD_REF_NAME}"
+    when: on_success
+    expire_in: 1 hour
+  dependencies:
+  - build:regular
+
 build:expert:
   stage: build
-  image: php:7.0-apache
-  before_script:
-    - apt-get update -qq && apt-get install -y -qq zip
-    - zip -v
+  image: alex7r/lamp:ccp
   script:
     - if grep -rn './' -e "\xEF\xBB\xBF"; then exit 1; fi
     - grep -E -o '<version>(.*?)</version>' ./pkg_expert_quiz.xml | sed -E 's/<version>|<\/version>//g' | while read version; do find ./com_joomlaquiz_expert/admin/sql/updates/ -maxdepth 2 -name "*.sql" -print |  sed -E 's/.*\/|\.sql//g' | while read sqin; do if [ "$sqin" \> "$version" ]; then exit 1; fi; done; done
