--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ test:regular:
     - rm -f /var/www/html/index.html
     - wget https://github.com/joomla/joomla-cms/releases/download/$JOOMLAVERSION/Joomla_$JOOMLAVERSION-Stable-Full_Package.zip -P /var/tmp/
     - apt-get install unzip
-    - unzip /var/tmp/Joomla_$JOOMLAVERSION-Stable-Full_Package.zip -d /var/www
+    - unzip /var/tmp/Joomla_$JOOMLAVERSION-Stable-Full_Package.zip -d /var/www/html/
     - cd /var/www/html/
     - chown -R www-data:www-data .
     - sed -i "s/\$user = ''/\$user = '${DBUSER}'/" installation/configuration.php-dist
