--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ test:regular:
     DBUSER: "jdbuser"
     DBPASS: "dbupass"
     DBPREFIX: "prfx_"
-    JOOMLAVERSION: "3.6.5"
+    JOOMLAVERSION: "latest"
   image: alex7r/lamp:ccp
   before_script:
     - JUSERID=$[ ( $RANDOM % 100 )  + 1 ]
@@ -41,9 +41,9 @@ test:regular:
     - service --status-all
   script:
     - rm -f /var/www/html/index.html
-    - wget https://github.com/joomla/joomla-cms/releases/download/$JOOMLAVERSION/Joomla_$JOOMLAVERSION-Stable-Full_Package.zip -P /var/tmp/
+#    - wget https://github.com/joomla/joomla-cms/releases/download/$JOOMLAVERSION/Joomla_$JOOMLAVERSION-Stable-Full_Package.zip -P /var/tmp/
     - apt-get install unzip
-    - unzip /var/tmp/Joomla_$JOOMLAVERSION-Stable-Full_Package.zip -d /var/www/html/
+    - unzip /var/www/joomla_packages/Joomla_$JOOMLAVERSION-Stable-Full_Package.zip -d /var/www/html/
     - cd /var/www/html/
     - chown -R www-data:www-data .
     - sed -i "s/\$user = ''/\$user = '${DBUSER}'/" installation/configuration.php-dist
