--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
 
 build:regular:
   stage: build
-  image: alex7r/lamp:ccp
+  image: alex7r/joomladeception
   script:
     - if grep -rn './' -e "\xEF\xBB\xBF"; then exit 1; fi
     - grep -E -o '<version>(.*?)</version>' ./pkg_quiz.xml | sed -E 's/<version>|<\/version>//g' | while read version; do find ./com_joomlaquiz/admin/sql/updates/ -maxdepth 2 -name "*.sql" -print |  sed -E 's/.*\/|\.sql//g' | while read sqin; do if [ "$sqin" \> "$version" ]; then exit 1; fi; done; done
@@ -32,7 +32,7 @@ test:regular:
     DBPASS: "dbupass"
     DBPREFIX: "prfx_"
     JOOMLAVERSION: "latest"
-  image: alex7r/lamp:ccp
+  image: alex7r/joomladeception
   before_script:
     - JUSERID=$[ ( $RANDOM % 100 )  + 1 ]
     - service apache2 start
@@ -77,7 +77,7 @@ test:regular:
 
 build:expert:
   stage: build
-  image: alex7r/lamp:ccp
+  image: alex7r/joomladeception
   script:
     - if grep -rn './' -e "\xEF\xBB\xBF"; then exit 1; fi
     - grep -E -o '<version>(.*?)</version>' ./pkg_expert_quiz.xml | sed -E 's/<version>|<\/version>//g' | while read version; do find ./com_joomlaquiz_expert/admin/sql/updates/ -maxdepth 2 -name "*.sql" -print |  sed -E 's/.*\/|\.sql//g' | while read sqin; do if [ "$sqin" \> "$version" ]; then exit 1; fi; done; done
