--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,9 +36,10 @@ test:regular:
   before_script:
     - JUSERID=$[ ( $RANDOM % 100 )  + 1 ]
     - service apache2 start
+    - service mysql start
     - service --status-all
     - pwd
-    - ls -la /vaw/www/joomla_packages/
+    - ls -la /var/www/joomla_packages/
   script:
     - rm -f /var/www/html/index.html
 #    - wget https://github.com/joomla/joomla-cms/releases/download/$JOOMLAVERSION/Joomla_$JOOMLAVERSION-Stable-Full_Package.zip -P /var/tmp/
