--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,7 @@ test:regular:
     - service apache2 start
     - service --status-all
     - pwd
-    - ls -la /var/www/joomla_packages/
+    - ls -la /var/www/
   script:
     - rm -f /var/www/html/index.html
 #    - wget https://github.com/joomla/joomla-cms/releases/download/$JOOMLAVERSION/Joomla_$JOOMLAVERSION-Stable-Full_Package.zip -P /var/tmp/
