--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,93 +1,99 @@
-stages:
-  - build
-  - tests
-
-build:regular:
-  stage: build
+docker:
   image: alex7r/joomladeception
   script:
-    - if grep -rn './' -e "\xEF\xBB\xBF"; then exit 1; fi
-    - grep -E -o '<version>(.*?)</version>' ./pkg_quiz.xml | sed -E 's/<version>|<\/version>//g' | while read version; do find ./com_joomlaquiz/admin/sql/updates/ -maxdepth 2 -name "*.sql" -print |  sed -E 's/.*\/|\.sql//g' | while read sqin; do if [ "$sqin" \> "$version" ]; then exit 1; fi; done; done
-# delete updater temporary
-    - sed -E -i 's/<file.*?_joomplaceupdater.zip<\/file>//g' ./pkg_quiz.xml
-    - mkdir packages
-    - grep -E -o '<file.*>(.*?)</file>' ./pkg_quiz.xml |  sed -E 's/<file[^>]+>|.zip<\/file>//g' | while read in; do if [ "$in" != 'plg_installer_joomplaceupdater' ]; then cd ./"$in"; zip -r ./../packages/"$in".zip ./*; cd ./../; fi; done
-    - pwd
-  artifacts:
-    paths:
-    - packages/
-    - pkg_quiz.xml
-    name: "pkg_quiz_${CI_BUILD_REF_NAME}"
-    when: on_success
-    expire_in: 1 day
-
-test:regular:
-  stage: tests
-  variables:
-    JUSERNAME: "admin"
-    JUSEREMAIL: "admin@localhost.com"
-    JUSERPASS: "qweasd"
-    DB: "joomla_test"
-    DBUSER: "jdbuser"
-    DBPASS: "dbupass"
-    DBPREFIX: "prfx_"
-    JOOMLAVERSION: "latest"
-  image: alex7r/joomladeception
-  before_script:
-    - JUSERID=$[ ( $RANDOM % 100 )  + 1 ]
-    - service apache2 start
-    - service --status-all
+    - cat /proc/meminfo
     - service mysql start
-    - service --status-all
-  script:
-    - rm -f /var/www/html/index.html
-    - unzip /var/www/joomla_packages/Joomla_$JOOMLAVERSION-Stable-Full_Package.zip -d /var/www/html/
-    - cd /var/www/html/
-    - chown -R www-data:www-data .
-    - sed -i "s/\$user = ''/\$user = '${DBUSER}'/" installation/configuration.php-dist
-    - sed -i "s/\$password = ''/\$password = '${DBPASS}'/" installation/configuration.php-dist
-    - sed -i "s/\$db = ''/\$db = '${DB}'/" installation/configuration.php-dist
-    - sed -i "s/\$dbprefix = 'jos_'/\$dbprefix = '${DBPREFIX}'/" installation/configuration.php-dist
-    - sed -i "s/\$tmp_path = '\/tmp'/\$tmp_path = '\/var\/www\/tmp'/" installation/configuration.php-dist
-    - sed -i "s/\$log_path = '\/var\/logs'/\$log_path = '\/var\/www\/logs'/" installation/configuration.php-dist
-    - sed -i "s/\$cache_handler = 'file'/\$cache_handler = ''/" installation/configuration.php-dist
-    - mv installation/configuration.php-dist configuration.php
-    - echo "CREATE DATABASE ${DB}" | mysql -u root --password=qweasd
-    - echo "CREATE USER '${DBUSER}'@'%' IDENTIFIED BY '${DBPASS}';" | mysql -u root --password=qweasd
-    - echo "GRANT ALL ON ${DB}.* TO '${DBUSER}'@'%';" | mysql -u root --password=qweasd
-    - sed -i "s/#__/${DBPREFIX}/" installation/sql/mysql/joomla.sql
-    - cat installation/sql/mysql/joomla.sql | mysql -u $DBUSER --password=$DBPASS $DB
-    - JPASS="$(echo -n "$JUSERPASS" | md5sum | awk '{ print $1 }' )"
-    - echo "INSERT INTO \`${DBPREFIX}users\` (\`id\`, \`name\`, \`username\`, \`email\`, \`password\`, \`block\`, \`sendEmail\`, \`registerDate\`, \`lastvisitDate\`, \`activation\`, \`params\`, \`lastResetTime\`, \`resetCount\`, \`otpKey\`, \`otep\`, \`requireReset\`) VALUES ('${JUSERID}', 'Me', '${JUSERNAME}', '${JUSEREMAIL}', '${JPASS}', '0', '0', '0000-00-00 00:00:00.000000', '0000-00-00 00:00:00.000000', '', '', '0000-00-00 00:00:00.000000', '0', '', '', '0');" | mysql -u $DBUSER --password=$DBPASS $DB
-    - echo "INSERT INTO \`${DBPREFIX}user_usergroup_map\` (\`user_id\`, \`group_id\`) VALUES ('${JUSERID}', '8');" | mysql -u $DBUSER --password=$DBPASS $DB
-    - JUSERINC=$((JUSERID+1))
-    - echo "ALTER TABLE \`${DBPREFIX}users\` auto_increment = ${JUSERINC};" | mysql -u $DBUSER --password=$DBPASS $DB
-    - rm -rf installation/
-#    - cp -Rf /builds/joomlaquiz/tests/* /var/www/composer/tests/
-  artifacts:
-    paths:
-    - packages/
-    name: "tests_log_${CI_BUILD_REF_NAME}"
-    when: on_success
-    expire_in: 1 hour
-  dependencies:
-  - build:regular
 
-build:expert:
-  stage: build
-  image: alex7r/joomladeception
-  script:
-    - if grep -rn './' -e "\xEF\xBB\xBF"; then exit 1; fi
-    - grep -E -o '<version>(.*?)</version>' ./pkg_expert_quiz.xml | sed -E 's/<version>|<\/version>//g' | while read version; do find ./com_joomlaquiz_expert/admin/sql/updates/ -maxdepth 2 -name "*.sql" -print |  sed -E 's/.*\/|\.sql//g' | while read sqin; do if [ "$sqin" \> "$version" ]; then exit 1; fi; done; done
-# delete updater temporary
-    - sed -E -i 's/<file.*?_joomplaceupdater.zip<\/file>//g' ./pkg_expert_quiz.xml
-    - mkdir packages
-    - grep -E -o '<file.*>(.*?)</file>' ./pkg_expert_quiz.xml |  sed -E 's/<file[^>]+>|.zip<\/file>//g' | while read in; do if [ "$in" != 'plg_installer_joomplaceupdater' ]; then cd ./"$in"; zip -r ./../packages/"$in".zip ./*; cd ./../; fi; done
-    - pwd
-  artifacts:
-    paths:
-    - packages/
-    - pkg_expert_quiz.xml
-    name: "pkg_expert_quiz_${CI_BUILD_REF_NAME}"
-    when: on_success
-    expire_in: 1 day
+#stages:
+#  - build
+#  - tests
+#
+#build:regular:
+#  stage: build
+#  image: alex7r/joomladeception
+#  script:
+#    - if grep -rn './' -e "\xEF\xBB\xBF"; then exit 1; fi
+#    - grep -E -o '<version>(.*?)</version>' ./pkg_quiz.xml | sed -E 's/<version>|<\/version>//g' | while read version; do find ./com_joomlaquiz/admin/sql/updates/ -maxdepth 2 -name "*.sql" -print |  sed -E 's/.*\/|\.sql//g' | while read sqin; do if [ "$sqin" \> "$version" ]; then exit 1; fi; done; done
+## delete updater temporary
+#    - sed -E -i 's/<file.*?_joomplaceupdater.zip<\/file>//g' ./pkg_quiz.xml
+#    - mkdir packages
+#    - grep -E -o '<file.*>(.*?)</file>' ./pkg_quiz.xml |  sed -E 's/<file[^>]+>|.zip<\/file>//g' | while read in; do if [ "$in" != 'plg_installer_joomplaceupdater' ]; then cd ./"$in"; zip -r ./../packages/"$in".zip ./*; cd ./../; fi; done
+#    - pwd
+#  artifacts:
+#    paths:
+#    - packages/
+#    - pkg_quiz.xml
+#    name: "pkg_quiz_${CI_BUILD_REF_NAME}"
+#    when: on_success
+#    expire_in: 1 day
+#
+#test:regular:
+#  stage: tests
+#  variables:
+#    JUSERNAME: "admin"
+#    JUSEREMAIL: "admin@localhost.com"
+#    JUSERPASS: "qweasd"
+#    DB: "joomla_test"
+#    DBUSER: "jdbuser"
+#    DBPASS: "dbupass"
+#    DBPREFIX: "prfx_"
+#    JOOMLAVERSION: "latest"
+#  image: alex7r/joomladeception
+#  before_script:
+#    - JUSERID=$[ ( $RANDOM % 100 )  + 1 ]
+#    - service apache2 start
+#    - service --status-all
+#    - service mysql start
+#    - service --status-all
+#  script:
+#    - rm -f /var/www/html/index.html
+#    - unzip /var/www/joomla_packages/Joomla_$JOOMLAVERSION-Stable-Full_Package.zip -d /var/www/html/
+#    - cd /var/www/html/
+#    - chown -R www-data:www-data .
+#    - sed -i "s/\$user = ''/\$user = '${DBUSER}'/" installation/configuration.php-dist
+#    - sed -i "s/\$password = ''/\$password = '${DBPASS}'/" installation/configuration.php-dist
+#    - sed -i "s/\$db = ''/\$db = '${DB}'/" installation/configuration.php-dist
+#    - sed -i "s/\$dbprefix = 'jos_'/\$dbprefix = '${DBPREFIX}'/" installation/configuration.php-dist
+#    - sed -i "s/\$tmp_path = '\/tmp'/\$tmp_path = '\/var\/www\/tmp'/" installation/configuration.php-dist
+#    - sed -i "s/\$log_path = '\/var\/logs'/\$log_path = '\/var\/www\/logs'/" installation/configuration.php-dist
+#    - sed -i "s/\$cache_handler = 'file'/\$cache_handler = ''/" installation/configuration.php-dist
+#    - mv installation/configuration.php-dist configuration.php
+#    - echo "CREATE DATABASE ${DB}" | mysql -u root --password=qweasd
+#    - echo "CREATE USER '${DBUSER}'@'%' IDENTIFIED BY '${DBPASS}';" | mysql -u root --password=qweasd
+#    - echo "GRANT ALL ON ${DB}.* TO '${DBUSER}'@'%';" | mysql -u root --password=qweasd
+#    - sed -i "s/#__/${DBPREFIX}/" installation/sql/mysql/joomla.sql
+#    - cat installation/sql/mysql/joomla.sql | mysql -u $DBUSER --password=$DBPASS $DB
+#    - JPASS="$(echo -n "$JUSERPASS" | md5sum | awk '{ print $1 }' )"
+#    - echo "INSERT INTO \`${DBPREFIX}users\` (\`id\`, \`name\`, \`username\`, \`email\`, \`password\`, \`block\`, \`sendEmail\`, \`registerDate\`, \`lastvisitDate\`, \`activation\`, \`params\`, \`lastResetTime\`, \`resetCount\`, \`otpKey\`, \`otep\`, \`requireReset\`) VALUES ('${JUSERID}', 'Me', '${JUSERNAME}', '${JUSEREMAIL}', '${JPASS}', '0', '0', '0000-00-00 00:00:00.000000', '0000-00-00 00:00:00.000000', '', '', '0000-00-00 00:00:00.000000', '0', '', '', '0');" | mysql -u $DBUSER --password=$DBPASS $DB
+#    - echo "INSERT INTO \`${DBPREFIX}user_usergroup_map\` (\`user_id\`, \`group_id\`) VALUES ('${JUSERID}', '8');" | mysql -u $DBUSER --password=$DBPASS $DB
+#    - JUSERINC=$((JUSERID+1))
+#    - echo "ALTER TABLE \`${DBPREFIX}users\` auto_increment = ${JUSERINC};" | mysql -u $DBUSER --password=$DBPASS $DB
+#    - rm -rf installation/
+##    - cp -Rf /builds/joomlaquiz/tests/* /var/www/composer/tests/
+#  artifacts:
+#    paths:
+#    - packages/
+#    name: "tests_log_${CI_BUILD_REF_NAME}"
+#    when: on_success
+#    expire_in: 1 hour
+#  dependencies:
+#  - build:regular
+#
+#build:expert:
+#  stage: build
+#  image: alex7r/joomladeception
+#  script:
+#    - if grep -rn './' -e "\xEF\xBB\xBF"; then exit 1; fi
+#    - grep -E -o '<version>(.*?)</version>' ./pkg_expert_quiz.xml | sed -E 's/<version>|<\/version>//g' | while read version; do find ./com_joomlaquiz_expert/admin/sql/updates/ -maxdepth 2 -name "*.sql" -print |  sed -E 's/.*\/|\.sql//g' | while read sqin; do if [ "$sqin" \> "$version" ]; then exit 1; fi; done; done
+## delete updater temporary
+#    - sed -E -i 's/<file.*?_joomplaceupdater.zip<\/file>//g' ./pkg_expert_quiz.xml
+#    - mkdir packages
+#    - grep -E -o '<file.*>(.*?)</file>' ./pkg_expert_quiz.xml |  sed -E 's/<file[^>]+>|.zip<\/file>//g' | while read in; do if [ "$in" != 'plg_installer_joomplaceupdater' ]; then cd ./"$in"; zip -r ./../packages/"$in".zip ./*; cd ./../; fi; done
+#    - pwd
+#  artifacts:
+#    paths:
+#    - packages/
+#    - pkg_expert_quiz.xml
+#    name: "pkg_expert_quiz_${CI_BUILD_REF_NAME}"
+#    when: on_success
+#    expire_in: 1 day
