--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ test:
 #    DBPREFIX: "prfx_"
   script:
     - service --status-all
+    - alex7r__slim-mysql --version
 #    - cat /proc/meminfo
 #    - service mysql start
 #    - echo "CREATE DATABASE ${DB}" | mysql -u root --password=qweasd
