--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 test:
-  image: php:7.0
+#  image: php:7.0
+  image: alex7r/joomladeception
   services:
     - alex7r/slim-mysql
   variables:
@@ -7,9 +8,36 @@ test:
     MYSQL_ROOT_PASSWORD: qweasd
 #    DBUSER: "jdbuser"
 #    DBPASS: "dbupass"
-#    DBPREFIX: "prfx_"
+    DBPREFIX: "prfx_"
   script:
-    - echo "SELECT 'OK';" | mysqld -h alex7r__slim-mysql -u root -pqweasd joomla
+#    - echo "SELECT 'OK';" | mysqld -h alex7r__slim-mysql -u root -pqweasd joomla
+    - rm -f /var/www/html/index.html
+    - unzip /var/www/joomla_packages/Joomla_$JOOMLAVERSION-Stable-Full_Package.zip -d /var/www/html/
+    - cd /var/www/html/
+    - chown -R www-data:www-data .
+    - sed -i "s/\$host = 'localhost'/\$host = 'alex7r__slim-mysql'/" installation/configuration.php-dist
+    - sed -i "s/\$user = ''/\$user = 'root'/" installation/configuration.php-dist
+    - sed -i "s/\$password = ''/\$password = 'qweasd'/" installation/configuration.php-dist
+    - sed -i "s/\$db = ''/\$db = '${MYSQL_DATABASE}'/" installation/configuration.php-dist
+    - sed -i "s/\$dbprefix = 'jos_'/\$dbprefix = '${DBPREFIX}'/" installation/configuration.php-dist
+    - sed -i "s/\$tmp_path = '\/tmp'/\$tmp_path = '\/var\/www\/html\/tmp'/" installation/configuration.php-dist
+    - sed -i "s/\$log_path = '\/var\/logs'/\$log_path = '\/var\/www\/html\/logs'/" installation/configuration.php-dist
+    - sed -i "s/\$cache_handler = 'file'/\$cache_handler = ''/" installation/configuration.php-dist
+    - mv installation/configuration.php-dist configuration.php
+    - cat congifuration.php
+    - sed -i "s/#__/${DBPREFIX}/" installation/sql/mysql/joomla.sql
+    - cat installation/sql/mysql/joomla.sql | mysql -u root --password=qweasd $MYSQL_DATABASE
+#    - JPASS="$(echo -n "$JUSERPASS" | md5sum | awk '{ print $1 }' )"
+#    - echo "INSERT INTO \`${DBPREFIX}users\` (\`id\`, \`name\`, \`username\`, \`email\`, \`password\`, \`block\`, \`sendEmail\`, \`registerDate\`, \`lastvisitDate\`, \`activation\`, \`params\`, \`lastResetTime\`, \`resetCount\`, \`otpKey\`, \`otep\`, \`requireReset\`) VALUES ('${JUSERID}', 'Me', '${JUSERNAME}', '${JUSEREMAIL}', '${JPASS}', '0', '0', '0000-00-00 00:00:00.000000', '0000-00-00 00:00:00.000000', '', '', '0000-00-00 00:00:00.000000', '0', '', '', '0');" | mysql -u $DBUSER --password=$DBPASS $DB
+#    - echo "INSERT INTO \`${DBPREFIX}user_usergroup_map\` (\`user_id\`, \`group_id\`) VALUES ('${JUSERID}', '8');" | mysql -u $DBUSER --password=$DBPASS $DB
+#    - JUSERINC=$((JUSERID+1))
+#    - echo "ALTER TABLE \`${DBPREFIX}users\` auto_increment = ${JUSERINC};" | mysql -u $DBUSER --password=$DBPASS $DB
+#        - rm -rf installation/
+    #    - cp -Rf /builds/joomlaquiz/tests/* /var/www/composer/tests/
+
+
+
+
 #    - cat /proc/meminfo
 #    - service mysql start
 #    - echo "CREATE DATABASE ${DB}" | mysql -u root --password=qweasd
