--- a/mod_quiz_availablelp/en-GB.mod_quiz_availablelp.ini
+++ b/mod_quiz_availablelp/en-GB.mod_quiz_availablelp.ini
@@ -1,3 +1,3 @@
 MOD_QUIZ_AVAILABLE_LP_TITLE="Available Learning Path."
 MOD_QUIZ_AVAILABLE_LP_CATEGORY="Category"
-MOD_QUIZ_AVAILABLE_LP_LINK="Take Pre Test"
+MOD_QUIZ_AVAILABLE_LP_LINK="Link To LP"
