--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,13 @@
 stages:
   - build
+  -
+before_script:
+  - apt-get update
+  - apt-get install -y zip
 
 build:regular:
   stage: build
   image: busybox
-  before_script:
-    - apt-get update -qq && apt-get install -y -qq zip
   script:
     - if grep -rn './' -e "\xEF\xBB\xBF"; then exit 1; fi
     - grep -E -o '<version>(.*?)</version>' ./pkg_quiz.xml | sed -E 's/<version>|<\/version>//g' | while read version; do find ./com_joomlaquiz/admin/sql/updates/ -maxdepth 2 -name "*.sql" -print |  sed -E 's/.*\/|\.sql//g' | while read sqin; do if [ "$sqin" \> "$version" ]; then exit 1; fi; done; done
