--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,12 +2,11 @@ stages:
   - build
 
 before_script:
-  - apk update
-  - apk install -y zip
+  - apk add zip
 
 build:regular:
   stage: build
-  image: busybox:musl
+  image: alpine
   script:
     - if grep -rn './' -e "\xEF\xBB\xBF"; then exit 1; fi
     - grep -E -o '<version>(.*?)</version>' ./pkg_quiz.xml | sed -E 's/<version>|<\/version>//g' | while read version; do find ./com_joomlaquiz/admin/sql/updates/ -maxdepth 2 -name "*.sql" -print |  sed -E 's/.*\/|\.sql//g' | while read sqin; do if [ "$sqin" \> "$version" ]; then exit 1; fi; done; done
